[gd_scene load_steps=2 format=3 uid="uid://gs2mfyu8ou4j"]

[ext_resource type="Script" path="res://assets/scripts/garden_creation_popup.gd" id="1_y4s4t"]

[node name="GardenCreationPopup" type="Panel"]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -524.0
offset_top = 18.0
offset_right = -124.0
offset_bottom = 318.0
grow_horizontal = 2
scale = Vector2(2.56802, 2.56802)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_y4s4t")

[node name="CreateButton" type="Button" parent="."]
layout_mode = 2
offset_left = 140.0
offset_top = 250.0
offset_right = 270.0
offset_bottom = 281.0
text = "Create Garden"

[node name="ExitButton" type="OptionButton" parent="."]
layout_mode = 2
offset_left = 360.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.5
offset_right = 143.5
offset_bottom = 161.0
grow_horizontal = 2

[node name="Title" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 2
text = "Create a new Garden"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="GardenNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Garden Name:"
vertical_alignment = 1

[node name="GardenName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="DimensionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dimensions (X, Y):"

[node name="DimensionsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="XDimensionSlider" type="HSlider" parent="VBoxContainer/DimensionsContainer"]
custom_minimum_size = Vector2(200, 30)
layout_direction = 2
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="XDimensionSpinBox" type="SpinBox" parent="VBoxContainer/DimensionsContainer"]
layout_direction = 2
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1

[node name="YDimensionsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="YDimensionSlider" type="HSlider" parent="VBoxContainer/YDimensionsContainer"]
custom_minimum_size = Vector2(200, 30)
layout_direction = 2
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="YDimensionSpinBox" type="SpinBox" parent="VBoxContainer/YDimensionsContainer"]
layout_direction = 2
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1

[connection signal="pressed" from="CreateButton" to="." method="on_create_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/DimensionsContainer/XDimensionSlider" to="." method="on_x_slider_change"]
[connection signal="value_changed" from="VBoxContainer/DimensionsContainer/XDimensionSpinBox" to="." method="on_x_spin_box_change"]
[connection signal="value_changed" from="VBoxContainer/YDimensionsContainer/YDimensionSlider" to="." method="on_y_slider_change"]
[connection signal="value_changed" from="VBoxContainer/YDimensionsContainer/YDimensionSpinBox" to="." method="on_y_spin_box_change"]
